# crayons

./: pyproject.toml
crayons/: __init__.py  _inherit_docs.py  _types.py  crayons.py
tests/: conftest.py  test_basic_functionality.py  test_crayons.py  test_getattr.py  test_with_hypothesis.py
